# mazes

./: Cargo.toml  README.md
docs/: GPG_SETUP.md
maps/: maze.txt  small.txt  toroidal.txt
migrations/: 001_create_maze_table.sql
src/: errors.rs  lib.rs  main.rs  map.rs  pathfinding.rs  tests.rs
src/db/: maze.rs  mod.rs
src/domain/: map.rs  mod.rs  pathfinding.rs  pathfinding_test.rs
src/domain/map/: tests.rs
src/entities/: create_maze_request.rs  error_response.rs  maze_response.rs  maze_solution_request.rs  maze_solution_response.rs  mod.rs
src/handlers/: maze.rs  mod.rs  tests.rs
tests/: handlers.rs  map.rs  pathfinding.rs
