[package]
name = "mazes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
serde_json = "1.0"
